--- a/method_C/03.2b_plot-gene-coexpression.Rmd
+++ b/method_C/03.2b_plot-gene-coexpression.Rmd
@@ -42,14 +42,13 @@ w.df3 <- fread(analysis.dir %&% "coexpress-enrich_weighted_p10Coding.txt") %>%
 
 plot_enrich <- function(plot.df){
   plt <- ggplot(data=plot.df,aes(x=tissue,y=log_pval)) + 
-    geom_point(size=4.5,aes(shape=geneset,fill=log_pval),
+    geom_point(size=3,aes(shape=geneset,fill=log_pval),
                alpha=0.7) + 
     geom_hline(yintercept = -log(0.05/54,base=10)) + 
     geom_hline(yintercept = -log(0.05,base=10),linetype=2) + 
     facet_wrap(~threshold) + 
     scale_shape_manual(name="Gene set",values=c(21,22,23,24)) +
-    scale_fill_viridis(name="-log10(p)") + 
-    #scale_fill_manual("Gene Set",values=c("gold1","olivedrab2","brown","red"))+
+    scale_fill_viridis(name="-log10(p)",direction = -1) + 
     ylab("-log10(p)") + xlab("Tissue") + 
     theme(axis.text.x=element_text(size=14),
           strip.text = element_text(size=17),
@@ -86,10 +85,22 @@ filter(w.df,threshold==0.50) %>% arrange(.,perm.pvalue) %>% View(.)
 
 plt3 <- plot_enrich(w.df2)
 ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding.png",width=12,height=12)
+ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding.pdf",width=16,height=12)
 
 plt4 <- plot_enrich(w.df3)
 ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding.png",width=12,height=12)
 
+
+```
+
+# Just 0.2 
+
+```{r}
+
+plt3b <- plot_enrich(filter(w.df2,threshold==0.20))
+
+ggsave(plot=plt3b,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding20.png",width=6.5,height=6.5)
+ggsave(plot=plt3b,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding20.pdf",width=6.5,height=6.5)
 
 ```
 
